--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "tslint \"src/**/*.ts\"",
+    "pree2e": "webdriver-manager updata",
+    "e2e": "protractor",
+    "splitBuild":
+    "node src/changeFile.js src/index_dev.html src/index.html && ng build --output-path devDist --target development && node src/changeFile.js src/index_prod.html src/index.html && ng build --output-path prodDist --target production"
   },
   "private": true,
   "dependencies": {
